--- a/exercises/week2/bootstrap-practice/index.html
+++ b/exercises/week2/bootstrap-practice/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,38 +12,40 @@
   <link rel="stylesheet" href="styles.css">
   <title>Bootstrap Practice</title>
 </head>
+
 <body>
   <div class="jumbotron">
     <h1> Hello World! </h1>
   </div>
   <div class="container">
-      <!-- ROW 1-->
-      <div class="row">
-        <div class=" col-md-12 box pink"></div>
-      </div>
-      <!-- ROW 2-->
-      <div class="row">
-        <div class=" col-md-3 box bright-pink"></div>
-        <div class=" col-md-3 box bright-pink"></div>
-        <div class=" col-md-3 box bright-pink"></div>
-        <div class=" col-md-3 box bright-pink"></div>
-      </div>
-      <!-- ROW 3-->
-      <div class="row">
-        <div class=" col-md-6 box ocean"></div>
-        <div class=" col-md-6 box ocean"></div>
+    <!-- ROW 1-->
+    <div class="row">
+      <div class=" col-md-12 box pink"></div>
+    </div>
+    <!-- ROW 2-->
+    <div class="row">
+      <div class=" col-sm-1  col-md-3 col-lg-6 box bright-pink"></div>
+      <div class=" col-sm-4 col-md-3 col-lg-6 box bright-pink"></div>
+      <div class=" col-sm-2 col-md-3 col-lg-6 box bright-pink"></div>
+      <div class=" col-sm-3 col-md-3 col-lg-6 box bright-pink"></div>
+    </div>
+    <!-- ROW 3-->
+    <div class="row">
+      <div class=" col-sm-9 col-md-3 col-lg-6 box ocean"></div>
+      <div class=" col-sm-3 col-md-3 col-lg-6 box ocean"></div>
 
-      </div>
-      <!-- ROW 4-->
-      <div class="row">
-        <div class=" col-md-8 box lime"></div>
-        <div class=" col-md-4 box orange"></div>
-
-      </div>
+    </div>
+    <!-- ROW 4-->
+    <div class="row">
+      <div class=" col-sm-1 col-md-8 col-lg-8  box lime"></div>
+      <div class=" col-sm-11 col-md-4 col-lg-4 box orange"></div>
 
     </div>
 
+  </div>
 
 
-      </body>
-      </html>
+
+</body>
+
+</html>
