--- a/exercises/week2/bootstrap-practice/index.html
+++ b/exercises/week2/bootstrap-practice/index.html
@@ -24,25 +24,32 @@
     </div>
     <!-- ROW 2-->
     <div class="row">
-      <div class=" col-sm-1  col-md-3 col-lg-6 box bright-pink"></div>
-      <div class=" col-sm-4 col-md-3 col-lg-6 box bright-pink"></div>
-      <div class=" col-sm-2 col-md-3 col-lg-6 box bright-pink"></div>
-      <div class=" col-sm-3 col-md-3 col-lg-6 box bright-pink"></div>
+      <div class=" col-md-3 box bright-pink"></div>
+      <div class=" col-md-3 box bright-pink"></div>
+      <div class=" col-md-3 box offset"></div>
+      <div class=" col-md-3  box bright-pink"></div>
     </div>
     <!-- ROW 3-->
     <div class="row">
-      <div class=" col-sm-9 col-md-3 col-lg-6 box ocean"></div>
-      <div class=" col-sm-3 col-md-3 col-lg-6 box ocean"></div>
+      <div class=" col-md-6 box">
+        <div class="row">
+          <div class=" col-md-3 box lime"></div>
+          <div class=" col-md-3 box lime"></div>
+          <div class=" col-md-3 box lime"></div>
+          <div class=" col-md-3 box lime"></div>
+        </div>
+      </div>
+
+      <div class=" col-md-6 box ocean"></div>
+
+      <!-- ROW 4-->
+      <div class="row">
+        <div class=" col-md-8 box lime"></div>
+        <div class=" col-md-4 box orange"></div>
+
+      </div>
 
     </div>
-    <!-- ROW 4-->
-    <div class="row">
-      <div class=" col-sm-1 col-md-8 col-lg-8  box lime"></div>
-      <div class=" col-sm-11 col-md-4 col-lg-4 box orange"></div>
-
-    </div>
-
-  </div>
 
 
 
