--- a/exercises/week2/calculator/index.html
+++ b/exercises/week2/calculator/index.html
@@ -32,6 +32,7 @@
 <input id="mod1" type="number"> <input id="mod2" type="number">
 <button id="moduleTogether">Fine the Remainer</button>
 <div id="resultMod"></div>
+<div id="result"></div>
 </div>
 <div class="col-md-3"></div>
 </div>
