--- a/exercises/week2/calculator/index.html
+++ b/exercises/week2/calculator/index.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
-<!-- BOOTSTRAP CSS -->
+  <!-- BOOTSTRAP CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- GOOGLE FONTS -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|VT323" rel="stylesheet">
   <title>Calculator</title>
 </head>
+
 <body>
-<div class="container">
-  <div class="col-md-3"></div>
-  <div class="col-md-6">
-<input id="add1" type="number"> <input id="add2" type="number">
-<button id="addTogether">Add</button>
-<div id="resultAdd"></div>
+  <div class="container">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="back">
+      <h1 class="calc">Arithmetic Gadget</h1>
+      <input class="input-lg" id="add1" type="number">
+      <input class="input-lg" id="add2" type="number">
+      <button class="btn-calc" id="addTogether">+</button>
+      <button class="btn-calc" id="subTogether">-</button>
+      <button class="btn-calc" id="mulTogether">X</button>
+      <button class="btn-calc" id="divideTogether">/</button>
+      <button class="btn-calc" id="moduleTogether">mod</button>
 
-<input id="sub1" type="number"> <input id="sub2" type="number">
-<button id="subTogether">Subtract</button>
-<div id="resultSub"></div>
-
-<input id="mul1" type="number"> <input id="mul2" type="number">
-<button id="mulTogether">Multiply</button>
-<div id="resultMul"></div>
-
-<input id="div1" type="number"> <input id="div2" type="number">
-<button id="divideTogether">Divide</button>
-<div id="resultDiv"></div>
-
-<input id="mod1" type="number"> <input id="mod2" type="number">
-<button id="moduleTogether">Fine the Remainer</button>
-<div id="resultMod"></div>
-<div id="result"></div>
-</div>
-<div class="col-md-3"></div>
-</div>
-<script src="scripts.js"></script>
+      <div id="result"></div>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+  <script src="scripts.js"></script>
 </body>
+
 </html>
