mario initial a lot of mario css

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -5,15 +5,112 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- CUSTOM CSS -->
+  <!-- CUSTOM CSS -->
   <link rel="stylesheet" href="styles.css">
   <!-- BOOTSTRAP CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- GOOGLE FONT -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  <title>Mario Pest</title>
+  <sub-heads>Mario Pest</sub-heads>
 </head>
 
 <body>
+  <nav class="navbar text-center">
+
+    <h1 class="mario"> Mario Pest Control</h1>
+  </nav>
+  <div class="container">
+    <div class="row">
+
+      <div class="col-sm-12">
+        <div class="brick center-block text-center">
+          <h2 center-block class="mario"> Grand Total of Coins </h2>
+          <div class="center-block grand-total text-center mario" id="grand-total"></div>
+
+        </div>
+
+      </div>
+    </div>
+
+
+    <!-- GOOBS -->
+    <div class="row">
+  <!-- GOOMBA -->
+      <div class="col-md-4 text-center">
+        <div class="pests">
+          <h3 class="text-center mario"> Goombas</h3>
+          <h4 class="text-center sub-heads">Goomba Cost: 5 Coins</h4>
+          <img class="pest-img center-block smart-image" src="img/goob.png" alt="mario, nintendo">
+          <h5 class="text-center lil sub-heads"> Total Price for Goombas</h5>
+          <div class="vbottom center-block total" id="goomba-total"><p class="mario">0</p></div>
+        </div>
+
+      </div>
+
+
+
+  <!-- BOB-OMBS -->
+      <div class="col-md-4  text-center">
+        <div class="pests">
+          <h3 class=" text-center mario"> Bob-ombs</h3>
+          <h4 class="text-center sub-heads">Bob-ombs Cost: 7 Coins</h4>
+          <img class="pest-img center-block pest-pad" src="img/bomb.png" alt="mario, nintendo">
+          <h5 class="text-center lil sub-heads"> Total Price for Bob-ombs</h5>
+          <div class="vbottom2 center-block total" id="bob-total"><p class="mario">0</p></div>
+        </div>
+      </div>
+
+
+  <!-- CHEEP -->
+      <div class="col-md-4 text-center">
+        <div class="pests">
+          <h3 class="text-center mario"> Cheep-cheeps</h3>
+          <h4 class="text-center sub-heads">Cheep-cheeps Cost: 11 Coins</h4>
+          <img class="pest-img center-block pest-pad" src="img/cheep.png" alt="mario, nintendo">
+          <h5 class="text-center lil sub-heads"> Total Price for Cheep-cheeps</h5>
+          <div class="vbottom2 center-block total" id="cheep-total"><p class="mario">0</p></div>
+        </div>
+
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-sm-12 text-center mario">
+        <p>To add coins to the total press the coorisponding button</p>
+      </div>
+    </div>
+    <!-- CONTROLLER -->
+    <div class="row center-block">
+      <div class="col-sm3 "></div>
+      <div class=" col-sm-6 ">
+        <div class="controller ">
+          <div class="left-bk ">
+            <div class="left-circle ">
+              <div class="cross "></div>
+            </div>
+          </div>
+          <div class="center-bk "></div>
+          <div class="right-bk ">
+
+            <div class="button2 ">
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+    <div class="col-sm3 "></div>
+  </div>
+
+
+
+
+  <footer class="footer ">
+    <p>Mario</p>
+  </footer>
 
 
 
@@ -21,7 +118,7 @@
 
 
   <!-- CUSTOM JAVASCRIPT -->
-<script src="scripts.js"></script>
+  <script src="scripts.js "></script>
 </body>
 
 </html>
