--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="styles.css">
   <!-- BOOTSTRAP CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- GOOGLE FONT -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  <sub-heads>Mario Pest</sub-heads>
+  <title>Mario Pest Control</title>
 </head>
 
 <body>
@@ -82,27 +84,36 @@
     </div>
     <!-- CONTROLLER -->
     <div class="row center-block">
-      <div class="col-sm3 "></div>
-      <div class=" col-sm-6 ">
+
+      <div class=" col-sm-12 center-block">
+        <div class="handle">
         <div class="controller ">
           <div class="left-bk ">
-            <div class="left-circle ">
-              <div class="cross "></div>
+            <div class="left-circle">
+
+                <i class="fa fa-plus fa-5x" aria-hidden="true"></i>
+
             </div>
           </div>
           <div class="center-bk "></div>
           <div class="right-bk ">
+            <div class="right-circle">
+
+                <i class="fa fa-plus fa-5x" aria-hidden="true"></i>
+
+            </div>
 
             <div class="button2 ">
 
             </div>
           </div>
         </div>
+        </div>
       </div>
 
 
     </div>
-    <div class="col-sm3 "></div>
+
   </div>
 
 
