--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -87,8 +87,8 @@
 
       <div class=" col-sm-12 center-block">
         <div class="handle">
-        <div class="controller ">
-          <div class="left-bk ">
+        <div class="controller">
+          <div class="left-bk">
             <div class="left-circle">
 
                 <i class="fa fa-plus fa-5x" aria-hidden="true"></i>
@@ -96,8 +96,17 @@
             </div>
           </div>
           <div class="center-bk "></div>
-          <div class="right-bk ">
+          <div class="right-bk">
             <div class="right-circle">
+              <div class="bar">
+                <button class=" super-button"><p>G</p></button>
+                <button class="super-button"><p>B</p></button>
+              </div>
+              <div class="bar">
+                <button class="super-button"><p>C</p></button>
+                <button class="super-button"><p></p></button>
+              </div>
+
 
                 <i class="fa fa-plus fa-5x" aria-hidden="true"></i>
 
