--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- GOOGLE FONT -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <!-- ANIMATE CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
   <title>Mario Pest Control</title>
 </head>
@@ -44,7 +46,7 @@
         <div class="pests">
           <h3 class="text-center mario"> Goombas</h3>
           <h4 class="text-center sub-heads">Goomba Cost: 5 Coins</h4>
-          <img class="pest-img center-block smart-image" src="img/goob.png" alt="mario, nintendo">
+          <img class="pest-img center-block animted" id="pest-img-goob" src="img/goob.png" alt="mario, nintendo">
           <h5 class="text-center lil sub-heads"> Number of Goombas</h5>
           <div class="center-block total mario" id="goomba-total"></div>
           <h5 class="text-center lil sub-heads"> Total Price for Goombas</h5>
@@ -93,7 +95,7 @@
   <!-- CONTROLLER -->
   <div class="row ">
 
-    <div class=" col-sm-12 ">
+    <div class=" col-xs-12 ">
 
       <div class="controller center-block text-center">
         <div class="left-bk">
@@ -127,15 +129,15 @@
       </div>
 
     </div>
+
+  </div>
+
     <div class="row">
       <div class="col-sm-12">
         <div class="footer text-center">
           <p>mario@mario-world.com | www.mariopests.com | 133 Luigi Ave. Mario City, Mario World</p>
         </div>
       </div>
-    </div>
-
-  </div>
 
 
 
@@ -149,8 +151,9 @@
 
 
 
-  <!-- CUSTOM JAVASCRIPT -->
-  <script src="scripts.js "></script>
-</body>
 
-</html>
+    <!-- CUSTOM JAVASCRIPT -->
+    <script src="scripts.js "></script>
+  </body>
+
+  </html>
