totals appear as zero on page load

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -46,7 +46,7 @@
         <div class="pests">
           <h3 class="text-center mario"> Goombas</h3>
           <h4 class="text-center sub-heads">Goomba Cost: 5 Coins</h4>
-          <img class="pest-img center-block animted" id="pest-img-goob" src="img/goob.png" alt="mario, nintendo">
+          <img class="pest-img center-block animte" id="pest-img-goob" src="img/goob.png" alt="mario, nintendo">
           <h5 class="text-center lil sub-heads"> Number of Goombas</h5>
           <div class="center-block total mario" id="goomba-total"></div>
           <h5 class="text-center lil sub-heads"> Total Price for Goombas</h5>
@@ -139,6 +139,8 @@
         </div>
       </div>
 
+    </div>
+
 
 
 
@@ -153,6 +155,10 @@
 
 
     <!-- CUSTOM JAVASCRIPT -->
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
     <script src="scripts.js "></script>
   </body>
 
