mario everything is working!!!

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -109,12 +109,12 @@
         <div class="right-bk">
           <div class="right-circle">
             <div class="bar">
-              <button id="goomba-go" class="green"><span class="center-block ">G</span></button>
-              <button id="bob-go" class=" blue"><span class="center-block ">B</span></button>
+              <button id="goomba-go" class="green go"><span class="center-block ">G</span></button>
+              <button id="bob-go" class=" blue go"><span class="center-block ">B</span></button>
             </div>
             <div class="bottom-bar">
-              <button id="cheep-go" class=" yellow"><span class="center-block ">C</span></button>
-              <button id="reset" class="red"><span class="center-block ">R</span></button>
+              <button id="cheep-go" class=" yellow go"><span class="center-block ">C</span></button>
+              <button id="reset" class="red "><span class="center-block ">R</span></button>
             </div>
 
 
