--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -46,7 +46,7 @@
         <div class="pests">
           <h3 class="text-center mario"> Goombas</h3>
           <h4 class="text-center sub-heads">Goomba Cost: 5 Coins</h4>
-          <img class="pest-img center-block animte" id="pest-img-goob" src="img/goob.png" alt="mario, nintendo">
+          <img class="pest-img center-block animated" id="pest-img-goob" src="img/goob.png" alt="mario, nintendo">
           <h5 class="text-center lil sub-heads"> Number of Goombas</h5>
           <div class="center-block total mario" id="goomba-total"></div>
           <h5 class="text-center lil sub-heads"> Total Price for Goombas</h5>
@@ -62,7 +62,7 @@
         <div class="pests">
           <h3 class=" text-center mario"> Bob-ombs</h3>
           <h4 class="text-center sub-heads">Bob-ombs Cost: 7 Coins</h4>
-          <img class="pest-img center-block pest-pad" src="img/bomb.png" alt="mario, nintendo">
+          <img class="pest-img center-block pest-pad animated" id="pest-img-bob" src="img/bomb.png" alt="mario, nintendo">
           <h5 class="text-center lil sub-heads"> Bob-ombs</h5>
           <div class="  center-block total mario" id="bob-total"></div>
           <h5 class="text-center lil sub-heads"> Total Price for Bob-ombs</h5>
@@ -76,7 +76,7 @@
         <div class="pests">
           <h3 class="text-center mario"> Cheep-cheeps</h3>
           <h4 class="text-center sub-heads">Cheep-cheeps Cost: 11 Coins</h4>
-          <img class="pest-img center-block pest-pad" src="img/cheep.png" alt="mario, nintendo">
+          <img class="pest-img center-block pest-pad animated" id="pest-img-cheep" src="img/cheep.png" alt="mario, nintendo">
           <h5 class="text-center lil sub-heads"> Cheep-cheeps</h5>
           <div class="  center-block total mario" id="cheep-total"></div>
           <h5 class="text-center lil sub-heads"> Total Price for Cheep-cheeps</h5>
@@ -88,7 +88,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12 text-center mario">
-        <p>To add coins to the total press the coorisponding button</p>
+        <h3>To add coins to the total press the coorisponding button</h3>
       </div>
     </div>
   </div>
@@ -105,7 +105,9 @@
 
           </div>
         </div>
-        <div class="center-bk "></div>
+        <div class="center-bk ">
+
+        </div>
         <div class="right-bk">
           <div class="right-circle">
             <div class="bar">
