--- a/exercises/week4/hit-list/index.html
+++ b/exercises/week4/hit-list/index.html
@@ -9,7 +9,7 @@
   <title>Hit List</title>
 </head>
 <body class="bk">
-  <nav class="navbar navbar-default">
+  <nav class="navbar nav navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <img class="don" src="don.jpg" alt="">
